testsuite/tests/linear/should_fail/T20083.stderr
T20083.hs:8:6: error: [GHC-25897]
    • Couldn't match type ‘m’ with ‘Many’
        arising from multiplicity of ‘x’
      ‘m’ is a rigid type variable bound by
        the type signature for:
          ap :: forall a b (m :: Multiplicity). (a -> b) -> a %m -> b
        at T20083.hs:7:1-45
    • In an equation for ‘ap’: ap f x = f x
    • Relevant bindings include
        ap :: (a -> b) -> a %m -> b (bound at T20083.hs:8:1)

T20083.hs:11:5: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from a non-linear pattern ‘_’
    • In the pattern: _
      In an equation for ‘ap2’: ap2 _ = ()

